--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,8 +6,20 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Lato", sans-serif;
+  background-color: #1c1c28;
+  color: #fff;
+  overflow: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
 }
 
 a {
@@ -18,5 +30,3 @@ a {
 * {
   box-sizing: border-box;
 }
-
-
